2008-06-10 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Rearrangement of Error Histograms 
	* Tag as TrigT1CaloMonitoring-00-03-15

2008-06-02  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * In CP simulation check overview plots flag steps needing
          Trigger Menu in red.
        * Tag as TrigT1CaloMonitoring-00-03-14

2008-05-30  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Use overlap data in RoI simulation check
        * Tag as TrigT1CaloMonitoring-00-03-13

2008-05-28  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Add CPM Tower mismatch plots by serialiser FPGA
        * Tag as TrigT1CaloMonitoring-00-03-12

2008-05-19 Damien Prieur <damien.prieur@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-03-11
	* TrigT1CaloMonitoring_forRecExCommission.py:
	  commented several xxxxxx.OutputLevel=VERBOSE

2008-05-16 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Bugfix in binning and Ppm crates
	* Tag as TrigT1CaloMonitoring-00-03-10

2008-05-07  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Bugfix in TrigT1CaloCpmMonTool.cxx
        * Tag as TrigT1CaloMonitoring-00-03-09

2008-05-07  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Minor tweaks to CPM histograms
        * Tag as TrigT1CaloMonitoring-00-03-08

2008-05-06 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* minor changes to histograms
	* default energy range set to maximum
	* Tag as TrigT1CaloMonitoring-00-03-06

2008-05-02  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Add more expert plots to CPMSimBSMon
        * Reduce number of plots in TrigT1CaloCpmMonTool
        * Tag as TrigT1CaloMonitoring-00-03-05

2008-04-22  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Fix vector initialisation bug at run change in
          TrigT1CaloCpmMonTool
        * Tag as TrigT1CaloMonitoring-00-03-04

2008-04-04  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Update TrigT1CaloMonitoring_forRecExCommission.py
          for CPMSimBSMon
        * Tag as TrigT1CaloMonitoring-00-03-03
