@@ -1,3 +1,7 @@
+2008-06-12 Andrea Neusiedl <andrea.neusiedl@cern.ch>
+	* Timing issues of Ppms changed
+	* Tag as TrigT1CaloMonitoring-00-03-16
+
 2008-06-10 Andrea Neusiedl <andrea.neusiedl@cern.ch>
 	* Rearrangement of Error Histograms 
 	* Tag as TrigT1CaloMonitoring-00-03-15
